--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
 
   <groupId>org.example</groupId>
   <artifactId>easy-websocket</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>easy-websocket</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/mirsery/easy-websocket.git</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
